fix:some bugs
