# handler/collection/collection.go
@@ -12,12 +12,12 @@ type IdeaResponse struct {
 
 // CreateCollectionRequest ... 新增收藏请求
 type CreateCollectionRequest struct {
-	CollectorId int `json:"collector_id"`
+	
 	IdeaId      int `json:"idea_id"`
 }
 
 // DeleteCollectionRequest ... 取消收藏请求
 type DeleteCollectionRequest struct {
-	CollectorId int `json:"collector_id"`
+
 	IdeaId      int `json:"idea_id"`
 }
